name:                raven
version:             0.1.0.0
synopsis:            Scheme implementation, written in Haskell
description:         Please see README.md
homepage:            https://github.com/luc-tielen/raven#README.md
license:             BSD3
license-file:        LICENSE
author:              Luc Tielen
maintainer:          luc.tielen@gmail.com
copyright:           2016 Luc Tielen
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Raven.Types
                     , Raven.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1 && < 4
  default-language:    Haskell2010

executable raven-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , raven
  default-language:    Haskell2010

test-suite raven-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Raven.ParserSpec 
                     , Raven.TypesSpec
  build-depends:       base
                     , raven
                     , parsec >= 3.1 && < 4
                     , hspec >= 2.2 && < 3
                     , tasty >= 0.11 && < 1
                     , tasty-hspec >= 1.1 && < 2
                     , QuickCheck >= 2.8 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/luc-tielen/raven

